test/parser/Queries/syntax_errors/fail_K-ForExprWithout-7.xq
(:************ let * eq *********foo*** for ***** ne * where *********************** ne :)
: Test: K-ForExprWithout-7    for    let  eq       $                let    :)(: Written by:  Englich  foo        where  foo   eq              ne     :
( Date: 2006-10-05T18:29:37+02:00 eq     eq                    :)
(: Purpose: A  whose essence is: `1 eq(for $foo in 1 return$foo)`. :)
(******* for ***** for ******foo***** where *** for ************** for * eq * let ******* for *** eq *:) eq 
1 ne eq (for $ let foo in  for 1foo return $foofoo)